2005-11-11 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.14.2
	* info/patches/maintenance_patches/patch-2.6.14.2: added

2005-11-11 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.14-mm2
	* info/patches/mm_patches/2.6.14-mm2: added

2005-11-08 David Brown <dmlb2000@gmail.com>
	* info/patches/tarpit_patches/tarpit.patch: fixed url and added more
	  applied kernels

2005-11-08 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.14.1
	* info/patches/maintenance_patches/patch-2.6.14.1: added

2005-11-07 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.14-ck3-server
	* info/patches/ck_server_patches/patch-2.6.14-ck3-server: added

2005-11-07 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.14-ck3
	* info/patches/ck_patches/patch-2.6.14-ck3: added

2005-11-05 Eric Sandall <eric@sandall.us>
	* info/patches/sws2_patches/software-suspend-2.2-rc8-for-2.6.14.patch:
	  Removed (didn't cleanly apply to 2.6.14)
	* info/patches/sws2_patches/software-suspend-2.2-rc9-for-2.6.14.patch:
	  Added
	* info/patches/gensplash_patches/fbsplash-0.9.2-r5-2.6.14.patch: Added

2005-11-06 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.14-mm1
	* info/patches/mm_patches/2.6.14-mm1: added

2005-11-03 Eric Sandall <eric@sandall.us>
	* info/patches/sws2_patches/software-suspend-2.2-{rc7-for-2.6.13,
	  rc8-for-2.6.14}.patch: Added

2005-11-02 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.14-ck2-server
	* info/patches/ck_server_patches/patch-2.6.14-ck2-server: added

2005-11-02 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.14-ck2
	* info/patches/ck_patches/patch-2.6.14-ck2: added

2005-11-02 David Brown <dmlb2000@gmail.com>
	* info/patches/reiser4_patches/reiser4-for-2.6.13-4.patch: added