@@ -1,0 +1,3 @@
+appliedkernels="2.6.14"
+source="tarpit-for-${appliedkernels}.patch.gz"
+source_url="http://shlrm.org/sourcemage/${source}"
