@@ -1,4 +1,4 @@
-appliedkernels="2.6.14 2.6.13 2.6.12 2.6.11 2.6.10 2.6.9 2.6.8.1 2.6.7 2.6.6"
+appliedkernels="2.6.13 2.6.12 2.6.11 2.6.10 2.6.9 2.6.8.1 2.6.7 2.6.6"
 source="tarpit.patch.gz"
-source_url="http://shlrm.org/sourcemage/${source}"
+source_url="ftp://ftp.backronym.org/${source}"
 pval=0
