@@ -1,4 +1,8 @@
 2005-11-11 David Brown <dmlb2000@gmail.com>
+	* info/patches/tarpit_patches/tarpit.patch: reverted to old source url
+	* info/patches/tarpit_patches/tarpit-for-2.6.14.patch: added
+
+2005-11-11 David Brown <dmlb2000@gmail.com>
 	* latest.defaults: updated latest to patch-2.6.14.2
 	* info/patches/maintenance_patches/patch-2.6.14.2: added
 
